# NexaServer

./: .gitignore  README.adoc  README.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts
python/NuixServerTest/: README.md  pyproject.toml
python/NuixServerTest/tests/: test_nuix.py
python/deprecated/: README.md  pyproject.toml
python/deprecated/src/nuix_server/: agent.py  main.py  spec.py
python/deprecated/src/nuix_server/router/: daily.py  page.py  record.py
python/deprecated/src/nuix_server/ui/: ui_tree.py
src/main/kotlin/com/hcifuture/nuixserver/: MainVerticle.kt
src/main/kotlin/com/hcifuture/nuixserver/auth/: JWTAuthProc.kt
src/main/kotlin/com/hcifuture/nuixserver/config/: Config.kt
src/main/kotlin/com/hcifuture/nuixserver/di/: Inject.kt  KimiProvider.kt  OpenAIProvider.kt
src/main/kotlin/com/hcifuture/nuixserver/nuix/: ChatSession.kt  NuixMemory.kt  NuixPrompt.kt  NuixScheduler.kt  NuixSelector.kt  NuixService.kt  NuixSession.kt  NuixUser.kt  NuixUserManager.kt
src/main/kotlin/com/hcifuture/nuixserver/nuix/data/: NuixContext.kt  NuixLauncher.kt  (+7 more)
src/main/kotlin/com/hcifuture/nuixserver/router/: NuixRouter.kt  SessionRouter.kt
src/main/kotlin/com/hcifuture/nuixserver/session/: ChatSession.kt  NuixSession.kt  NuixSessionManager.kt
src/main/kotlin/com/hcifuture/nuixserver/util/: FileUtils.kt  HttpUtils.kt  VertxUtils.kt
src/main/kotlin/com/hcifuture/nuixserver/verticle/: NuixVerticle.kt  SessionVerticle.kt
src/main/resources/: ArticleSummaryService.yml  logback.xml
src/test/kotlin/com/hcifuture/nuixserver/: TestMainVerticle.kt
(+32 files in other folders)
