[project]
name = "nuix-server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "euxcet", email = "zcc.qwer@gmail.com"},
]
dependencies = [
    "langchain>=0.1.13",
    "langchain-openai>=0.1.1",
    "langchain-anthropic>=0.1.4",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3",
    "langserve[all]>=0.0.51",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
web = {call = "nuix_server.main:main"}
test = {call = "nuix_server.agent:main"}